[package]
name = "lemma"
version = "1.2.4"
edition = "2024"
description = "Greek-English Kindle dictionary generator"

[[bin]]
name = "lemma"
path = "src/main.rs"

[lib]
name = "lemma"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
rayon = "1.10"
regex = "1"
quick-xml = "0.36"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
httpdate = "1"
kindling = { version = "0.14", package = "kindling-mobi" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
